--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "multi-chatbot-frontend",
+  "name": "frontend",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,18 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
-    "axios": "^1.6.0",
+    "axios": "^1.11.0",
+    "highlight.js": "^11.9.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.8.0",
+    "rehype-highlight": "^7.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
-  "vite": "^5.0.8",
-  "@vitejs/plugin-react": "^4.0.0",
-  "tailwindcss": "...",
-  "postcss": "...",
-  "autoprefixer": "..."
-}
+    "@vitejs/plugin-react": "^5.0.0",
+    "vite": "^7.1.1"
+  }
 }
