--- a/backend/netlify/requirements.txt
+++ b/backend/netlify/requirements.txt
@@ -3,3 +3,6 @@ langchain==0.1.0
 langchain-core>=0.1.0
 langchain-groq>=0.0.1
 python-dotenv==1.0.0
+uvicorn==0.20.0
+pydantic==2.0.0
+python-multipart==0.0.6
