"netlify folder added in root directory"

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,28 @@
-[build]
-  command = "chmod +x ./build.sh && ./build.sh"
-  publish = "frontend/dist"
+# Multi-Chatbot Platform - Complete Netlify Configuration
+# File: netlify.toml (place in project root)
 
-[functions]
-  directory = "backend/netlify/functions"
+[build]
+  # Build your React frontend
+  command = "cd frontend && npm ci && npm run build"
+  
+  # Publish the built frontend
+  publish = "frontend/dist"
+  
+  # Functions directory at root level (where you copied them)
+  functions = "netlify/functions"
 
 [build.environment]
-  NODE_VERSION = "20"
+  # Python version for your functions
   PYTHON_VERSION = "3.9"
+  
+  # Node version for frontend build
+  NODE_VERSION = "20"
 
-# CRITICAL: Updated redirects for /api/chatbots/* endpoints
+# Alternative way to specify functions directory
+[functions]
+  directory = "netlify/functions"
+
+# CRITICAL: API redirects for your 8 chatbots
 [[redirects]]
   from = "/api/chatbots/*"
   to = "/.netlify/functions/api/:splat"
@@ -17,28 +30,29 @@
   force = true
 
 [[redirects]]
-  from = "/api/chatbots"
-  to = "/.netlify/functions/api"
-  status = 200
-  force = true
-
-# Fallback redirects
-[[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/api/:splat"
   status = 200
   force = true
 
-# Frontend SPA redirects
+# Frontend SPA redirects (React Router)
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-# CORS headers
+# CORS headers for your API functions
 [[headers]]
   for = "/.netlify/functions/*"
   [headers.values]
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type, Authorization"
+    Access-Control-Allow-Headers = "Content-Type, Authorization, X-Requested-With"
+
+# Environment context for production
+[context.production.environment]
+  NODE_ENV = "production"
+  
+# Development context
+[context.development.environment]
+  NODE_ENV = "development"
