--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,28 @@
-# Simplified configuration to get functions working
-[build]
-  command = "echo 'Testing functions deployment'"
-  publish = "frontend/"
+# Multi-Chatbot Platform - Complete Netlify Configuration
+# File: netlify.toml (place in project root)
 
+[build]
+  # Build your React frontend
+  command = "cd frontend && npm install && npm run build"
+  
+  # Publish the built frontend
+  publish = "frontend/dist"
+  
+  # Functions directory at root level (where you copied them)
+  functions = "netlify/functions"
+
+[build.environment]
+  # Python version for your functions
+  PYTHON_VERSION = "3.9"
+  
+  # Node version for frontend build
+  NODE_VERSION = "20"
+
+# Alternative way to specify functions directory
 [functions]
   directory = "netlify/functions"
 
-# Your API redirects
+# CRITICAL: API redirects for your 8 chatbots
 [[redirects]]
   from = "/api/chatbots/*"
   to = "/.netlify/functions/api/:splat"
@@ -19,15 +35,24 @@
   status = 200
   force = true
 
+# Frontend SPA redirects (React Router)
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-# CORS headers
+# CORS headers for your API functions
 [[headers]]
   for = "/.netlify/functions/*"
   [headers.values]
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type, Authorization"
+    Access-Control-Allow-Headers = "Content-Type, Authorization, X-Requested-With"
+
+# Environment context for production
+[context.production.environment]
+  NODE_ENV = "production"
+  
+# Development context
+[context.development.environment]
+  NODE_ENV = "development"
