--- a/netlify.toml
+++ b/netlify.toml
@@ -1,28 +1,15 @@
-# Multi-Chatbot Platform - Complete Netlify Configuration
-# File: netlify.toml (place in project root)
-
 [build]
-  # Build your React frontend
-  command = "cd frontend && npm install && npm run build"
-  
-  # Publish the built frontend
+  command = "chmod +x ./build.sh && ./build.sh"
   publish = "frontend/dist"
-  
-  # Functions directory at root level (where you copied them)
-  functions = "netlify/functions"
+
+[functions]
+  directory = "backend/netlify/functions"
 
 [build.environment]
-  # Python version for your functions
-  PYTHON_VERSION = "3.9"
-  
-  # Node version for frontend build
   NODE_VERSION = "20"
+  PYTHON_VERSION = "3.9"
 
-# Alternative way to specify functions directory
-[functions]
-  directory = "netlify/functions"
-
-# CRITICAL: API redirects for your 8 chatbots
+# CRITICAL: Updated redirects for /api/chatbots/* endpoints
 [[redirects]]
   from = "/api/chatbots/*"
   to = "/.netlify/functions/api/:splat"
@@ -30,29 +17,28 @@
   force = true
 
 [[redirects]]
+  from = "/api/chatbots"
+  to = "/.netlify/functions/api"
+  status = 200
+  force = true
+
+# Fallback redirects
+[[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/api/:splat"
   status = 200
   force = true
 
-# Frontend SPA redirects (React Router)
+# Frontend SPA redirects
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-# CORS headers for your API functions
+# CORS headers
 [[headers]]
   for = "/.netlify/functions/*"
   [headers.values]
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type, Authorization, X-Requested-With"
-
-# Environment context for production
-[context.production.environment]
-  NODE_ENV = "production"
-  
-# Development context
-[context.development.environment]
-  NODE_ENV = "development"
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
